--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,31 @@
-.navbar-lewagon {
+// .navbar-lewagon {
+//   justify-content: space-between;
+//   background: rgb(0, 0, 0);
+// }
+
+// .navbar-lewagon .navbar-collapse {
+//   flex-grow: 0;
+// }
+
+// .navbar-lewagon .navbar-brand img {
+//   width: 40px;
+// }
+
+.navbar-my {
+  width: 100%;
+  height: 60px;
+  background-color: black;
+  display: flex;
   justify-content: space-between;
-  background: white;
-}
-
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
-
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+  align-items: center;
+  padding: 0 70px;
+  color: #fff;
+  a {
+    color: #fff;
+    text-decoration: none;
+    font-family: "Archivo Black", sans-serif;
+  }
+  a:hover {
+    color: rgb(170, 170, 170);
+  }
 }
