--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,13 @@
-<h1>All my lists</h1>
-<% @lists.each do |list| %>
-  <h3><%= link_to list.name, list_path(list) %></h3>
-<% end %>
-<%= link_to "Create a new list", new_list_path %>
+<div class="banner-homepage">
+  <h1>All my lists</h1>
+  <%= link_to "Create a new list", new_list_path, class: "btn-success btn" %>
+</div>
+<div class="container">
+  <div class="card-flex-container">
+    <% @lists.each do |list| %>
+    <div class="list-card">
+      <h5><%= link_to list.name, list_path(list) %></h5>
+    </div>
+    <% end %>
+  </div>
+</div>
