--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
   <body>
     <div class="navbar-my">
       <%= link_to "My Lists", root_path %>
+      <%= link_to "+ new list", new_list_path %>
     </div>
     <%= yield %>
   </body>
