--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,5 +1,5 @@
 .list-card {
-  width: calc(100% / 4 - 20px);
+  width: 300px;
   height: 200px;
   background-color: rgb(72, 69, 69);
   border-radius: 2px;
@@ -8,9 +8,33 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
+  padding: 10px;
   a {
     color: white;
     text-decoration: none;
+  }
+  h5 {
+    text-decoration: none;
+  }
+}
+
+.list-card:hover {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.bookmark-card {
+  width: calc(100%/3 - 30px);
+  height: fit-content;
+  min-height: 400px;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 2px;
+  a {
+    color: $red;
+  }
+  a:hover {
+    color:black;
+    text-decoration: none;
+    text-shadow: none !important;
   }
 }
