--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,9 +3,13 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  gap: 20px;
+  gap: 25px;
   width: 100%;
-  margin-top: 20px;
+  margin: 40px 0;
+  a {
+    text-decoration: none !important;
+  }
+  a:hover {
+    text-shadow: 0 0 2px #000000;
+  }
 }
-
-
