--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -6,14 +6,16 @@
   <div class="card-flex-container">
     <% @list.bookmarks.each do |bookmark| %>
     <div class="bookmark-card">
-      <p style="height: 100px;"><%= bookmark.comment %></p>
-      <h5><%= bookmark.movie.title %></h5>
-      <p><%= bookmark.movie.overview %></p>
-      <h6><%= bookmark.movie.rating %></h6>
-      <p><%= bookmark.movie.poster_url %></p>
-      <a href="<%= list_bookmark_path(@list, bookmark) %>" data-turbo-method="delete" data-turbo-confirm="Are you sure?">
-        <i class="fa-solid fa-trash-can"></i>
-      </a>
+      <div class="text">
+        <p style="height: 100px;"><%= bookmark.comment %></p>
+        <h5><%= bookmark.movie.title %></h5>
+        <p><%= bookmark.movie.overview %></p>
+        <h6><%= bookmark.movie.rating %></h6>
+        <a href="<%= list_bookmark_path(@list, bookmark) %>" data-turbo-method="delete" data-turbo-confirm="Are you sure?">
+          <i class="fa-solid fa-trash-can"></i>
+        </a>
+      </div>
+      <img src="<%= bookmark.movie.poster_url %>" alt="movie poster">
     </div>
     <% end %>
   </div>
