--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,6 +1,6 @@
 .list-card {
   width: 300px;
-  height: 200px;
+  height: 400px;
   background-color: rgb(72, 69, 69);
   border-radius: 2px;
   text-align: center;
@@ -12,17 +12,25 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  padding: 20px;
   a {
     color: white;
     text-decoration: none;
   }
-  h5 {
+  h4 {
     text-decoration: none;
+    text-transform: uppercase;
   }
 }
 
 .list-card:hover {
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  box-shadow: rgba(0, 0, 0, 0.493) 0px 5px 15px;
+  transition: 0.3s;
+  cursor: pointer;
+  outline: 2px solid $green;
+  h4 {
+    color: $green;
+  }
 }
 
 .bookmark-card {
