--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -15,6 +15,7 @@
   width: 100%;
   height: 60px;
   background-color: black;
+  background-image: linear-gradient(190deg, #4d3430, #000);
   display: flex;
   justify-content: space-between;
   align-items: center;
