--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -11,7 +11,7 @@
         <h5><%= bookmark.movie.title %></h5>
         <p><%= bookmark.movie.overview %></p>
         <h6><%= bookmark.movie.rating %></h6>
-        <a href="<%= list_bookmark_path(@list, bookmark) %>" data-turbo-method="delete" data-turbo-confirm="Are you sure?">
+        <a href="<%= bookmark_path(bookmark) %>" data-turbo-method="delete" data-turbo-confirm="Are you sure?">
           <i class="fa-solid fa-trash-can"></i>
         </a>
       </div>
